# snippets_helper

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  FRONTEND_PATTERNS.md  README.md  autostart.py  create_app.sh  create_duckdb.py  create_icon.py  database.py  docker-compose.yml  exec_tab.py  main.py  notes_tab.py  prompt  prompt_api.md  requirements.txt  run_snip_helper.bat  start_helper.command  todo
.claude/: settings.local.json
TASKS/: SH-TASK-1.md
api/: Dockerfile  admin_tools.py  ai_commands.py  ai_prompt.py  ai_runtime.py  auth.py  config.py  database.py  deepseek_client.py  image_processing.py  main.py  media_utils.py  models.py  requirements.txt  schemas.py  share_utils.py  telegram_bot.py  telegram_poller.py  (+1 more)
desktop-rust/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
desktop-rust/src-tauri/binaries/: .gitkeep
desktop-rust/src-tauri/capabilities/: default.json
desktop-rust/src-tauri/src/: autostart.rs  clipboard.rs  lib.rs  main.rs  tray.rs
desktop-rust/src-tauri/src/commands/: admin.rs  ai.rs  clickhouse_docs.rs  commits.rs  exec.rs  finance.rs  gemma.rs  help.rs  launchpad.rs  media.rs  micro_picker.rs  mod.rs  module_windows.rs  notes.rs  ota.rs  repo_search.rs  settings.rs  share_links.rs  shortcuts.rs  sql_tools.rs  superset.rs  sync_cmd.rs  tasks.rs  vps.rs  whisper.rs
desktop-rust/src-tauri/src/db/: mod.rs  models.rs  queries.rs
desktop-rust/src-tauri/src/gemma/: catalog.rs  mod.rs  models.rs  postprocess.rs  server.rs  service.rs
desktop-rust/src-tauri/src/handlers/: mod.rs  sql_analyzer.rs  sql_formatter.rs  sql_macrosing.rs  sql_obfuscator.rs  sql_parser.rs
desktop-rust/src-tauri/src/hotkey/: mod.rs  native.rs  polling.rs
desktop-rust/src-tauri/src/sync/: client.rs  schema.rs
desktop-rust/src-tauri/src/whisper/: audio.rs  bin_manager.rs  catalog.rs  deepgram.rs  events.rs  gpu_detect.rs  inject.rs  metrics.rs  mod.rs  models.rs  postprocess.rs  server.rs  service.rs  speechkit_proto.rs  yandex.rs
(+438 files in other folders)
