[package]
name = "keyboard-helper"
version = "0.9.3"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
arboard = "3"
dirs = "5"
regex = "1"
hostname = "0.4"
rdev = "0.5"
zip = "2"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "thin"
opt-level = 3
strip = true

[build-dependencies]
tauri-build = "2"
