[package]
name = "keyboard-helper"
version = "1.3.19"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
arboard = "3"
dirs = "5"
regex = "1"
hostname = "0.4"
rdev = "0.5"
zip = "2"
log = "0.4"
env_logger = "0.11"
minisign-verify = "0.2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

futures-util = "0.3"

# Whisper voice input
cpal = "0.15"
hound = "3.5"
enigo = "0.2"
sysinfo = "0.30"

[profile.release]
lto = "thin"
opt-level = 3
strip = true

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = "2"
